user login base
base strutture for login part, and base check in order to understand how EditText variable works.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         app:layout_constraintVertical_bias="0.862" />
 
     <ImageButton
-        android:id="@+id/user_img"
+        android:id="@+id/userbutton"
         android:layout_width="87dp"
         android:layout_height="79dp"
         android:scaleType="fitXY"
