--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="green">#0F9D58</color>
     <color name="cool">#188FCF</color>
     <color name="warm">#F1D416</color>
+    <color name="blue">#0f1cd6</color>
 </resources>
