--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="cool">#188FCF</color>
     <color name="warm">#F1D416</color>
     <color name="blue">#0f1cd6</color>
+    <color name="red">#c7000a</color>
 </resources>
