--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="warm">#F1D416</color>
     <color name="blue">#0f1cd6</color>
     <color name="red">#c7000a</color>
+    <color name="grey">#949494</color>
 </resources>
