cambiato il database a SQL

--- a/app/src/main/res/layout/activity_change_password_page.xml
+++ b/app/src/main/res/layout/activity_change_password_page.xml
@@ -30,7 +30,7 @@
         app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/oldpasswordtxt"
+            android:id="@+id/curpasswordtxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="20"
@@ -65,23 +65,6 @@
             android:maxLength="20"
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/logoutbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="301dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="61dp"
-        android:text="logout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.041"
-        android:visibility="invisible"
-        android:enabled="false" />
 
     <Button
         android:id="@+id/resetbtn"
