--- a/app/src/main/res/layout/activity_userpage.xml
+++ b/app/src/main/res/layout/activity_userpage.xml
@@ -72,7 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.445"
-        android:enabled="false"/>
+        android:enabled="true"/>
 
     <TextView
         android:id="@+id/debugtxt"
@@ -110,6 +110,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.535"
-        android:enabled="false" />
+        android:enabled="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
