--- a/app/src/main/res/layout/activity_diarypage.xml
+++ b/app/src/main/res/layout/activity_diarypage.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/constraintLayout"
-    tools:context=".MainActivity2">
+    tools:context=".DiaryPage">
 
     <TextView
         android:id="@+id/textView"
