--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="Workout"
-        app:layout_constraintBaseline_toBaselineOf="@+id/DietButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/FoodButton"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/DietButton"
+        android:id="@+id/FoodButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Diet"
+        android:text="Food"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.095"
