--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -28,7 +28,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/number_txt"
                 app:layout_constraintTop_toBottomOf="@+id/food_name" />
 
             <TextView
@@ -41,11 +41,11 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/number_txt"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/number_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -65,7 +65,7 @@
                 android:layout_marginStart="110dp"
                 android:text="carb"
                 android:textSize="14sp"
-                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/number_txt"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -87,17 +87,15 @@
                 app:layout_constraintStart_toEndOf="@+id/food_carb"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/delete_food_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="192dp"
-                android:layout_marginTop="16dp"
-                android:background="?android:selectableItemBackground"
-                android:scaleType="fitXY"
-                app:layout_constraintStart_toEndOf="@+id/food_category"
-                app:layout_constraintTop_toBottomOf="@+id/food_prot"
-                app:srcCompat="@drawable/ic_baseline_cancel_24" />
+            <ImageView
+                android:id="@+id/delete_img"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="316dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_delete_24" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
