--- a/app/src/main/res/layout/activity_diarypage.xml
+++ b/app/src/main/res/layout/activity_diarypage.xml
@@ -8,7 +8,7 @@
     tools:context=".DiaryPage">
 
     <TextView
-        android:id="@+id/number_txt"
+        android:id="@+id/number_txt_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="second activity"
