--- a/app/src/main/res/layout/activity_foodpage.xml
+++ b/app/src/main/res/layout/activity_foodpage.xml
@@ -8,7 +8,7 @@
     tools:context=".FoodPage" >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleView"
+        android:id="@+id/recycleViewFood"
         android:layout_width="409dp"
         android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
