--- a/app/src/main/res/layout/my_row_food.xml
+++ b/app/src/main/res/layout/my_row_food.xml
@@ -28,7 +28,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/number_txt"
+                app:layout_constraintStart_toEndOf="@+id/number_txt_food"
                 app:layout_constraintTop_toBottomOf="@+id/food_name" />
 
             <TextView
@@ -41,11 +41,11 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/number_txt"
+                app:layout_constraintStart_toEndOf="@+id/number_txt_food"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/number_txt"
+                android:id="@+id/number_txt_food"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -85,17 +85,17 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/delete_img"
+                android:id="@+id/delete_food_img"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="28dp"
-                app:layout_constraintStart_toEndOf="@+id/modify_img"
+                app:layout_constraintStart_toEndOf="@+id/modify_food_img"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_delete_24" />
 
             <ImageView
-                android:id="@+id/modify_img"
+                android:id="@+id/modify_food_img"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="270dp"
