aggiunto l'opzione di filtraggio cibi ed esercizi

--- a/app/src/main/res/layout/activity_updateexercisepage.xml
+++ b/app/src/main/res/layout/activity_updateexercisepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateWorkoutPage">
+    tools:context=".UpdateExercisePage">
 
     <EditText
         android:id="@+id/workout_name_text_update"
