--- a/app/src/main/res/layout/activity_addexercisepage.xml
+++ b/app/src/main/res/layout/activity_addexercisepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddWorkoutPage">
+    tools:context=".AddExercisePage">
 
     <EditText
         android:id="@+id/workout_name_text"
