--- a/app/src/main/res/layout/activity_exercisepage.xml
+++ b/app/src/main/res/layout/activity_exercisepage.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WorkoutPage">
+    tools:context=".ExercisePage">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewWorkout"
