--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
         app:layout_constraintVertical_bias="0.158" />
 
     <Button
-        android:id="@+id/WorkoutButton"
+        android:id="@+id/ExerciseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:text="Workout"
+        android:text="Exercise"
         app:layout_constraintBaseline_toBaselineOf="@+id/FoodButton"
         app:layout_constraintEnd_toEndOf="parent" />
 
