--- a/app/src/main/res/layout/activity_addfoodpage.xml
+++ b/app/src/main/res/layout/activity_addfoodpage.xml
@@ -84,6 +84,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/food_fat_text"
         app:srcCompat="@drawable/no_image2" />
