--- a/app/src/main/res/layout/activity_updatefoodpage.xml
+++ b/app/src/main/res/layout/activity_updatefoodpage.xml
@@ -10,7 +10,7 @@
         android:id="@+id/food_name_text_update"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="name"
         android:inputType="textPersonName"
@@ -71,10 +71,20 @@
         android:id="@+id/updateFoodbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="8dp"
         android:text="modify"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/food_fat_text_update" />
+        app:layout_constraintTop_toBottomOf="@+id/foodimageview_update" />
+
+    <ImageView
+        android:id="@+id/foodimageview_update"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/food_fat_text_update"
+        app:srcCompat="@drawable/no_image2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
