--- a/app/src/main/res/layout/activity_addexercisepage.xml
+++ b/app/src/main/res/layout/activity_addexercisepage.xml
@@ -10,7 +10,7 @@
         android:id="@+id/workout_name_text"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="45dp"
         android:ems="10"
         android:hint="name"
         android:inputType="textPersonName"
@@ -58,10 +58,21 @@
         android:id="@+id/addWorkoutbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
         android:text="add"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/workout_series_text" />
+        app:layout_constraintTop_toBottomOf="@+id/exercisedimageview_add" />
+
+    <ImageView
+        android:id="@+id/exercisedimageview_add"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/workout_series_text"
+        app:srcCompat="@drawable/no_image2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
